<resources>
    <string name="app_name">ViewTube</string>
    <string name="logo_description">Logo</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="clear_search">Clear Search</string>
    <string name="exo_controls_rewind_description">Rewind 10 seconds</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_fastforward_description">Fast forward 10 seconds</string>
    <string name="exo_controls_fullscreen_description">Fullscreen</string>
    <string name="uploader_name">Uploader Name</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="post">Post</string>
    <string name="comments">Comments</string>
    <string name="guest">Guest</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="_00_00">00:00</string>
    <string name="comment">Comment</string>
    <string name="v">V</string>
    <string name="x">X</string>
    <string name="youtube_logo">YouTube Logo</string>
    <string name="search_button">Search button</string>
    <string name="search">Search</string>
    <string name="login_to">"Login to "</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="register_to">Register to</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_video">Add video</string>
    <string name="upload">Upload</string>
    <string name="backslash">/</string>
    <string name="_41_26">41:26</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="BaseUrl">http://10.0.2.2:12345/api/</string>
</resources>